# DVA338_grafik

Assignment 1/Part1/dva338_raytracer/RayTracer-main/: CMakeLists.txt  README.md
Assignment 1/Part1/dva338_raytracer/RayTracer-main/include/: Material.h  Object.h  Plan.h  Ray.h  RayTracer.h  Scene.h  Sphere.h
Assignment 1/Part1/dva338_raytracer/RayTracer-main/src/: Image.cpp  Main.cpp  Plan.cpp  Ray.cpp  RayTracer.cpp  Sphere.cpp
Assignment 1/dva338_raytracer/RayTracer-main/: CMakeLists.txt
Assignment 1/dva338_raytracer/RayTracer-main/include/: Image.h  Light.h  Material.h  Object.h  Plan.h  Ray.h  RayTracer.h  Scene.h  Sphere.h  Triangle.h  Vec3.h
Assignment 2/Lab2_Del 1/: algebra.cpp  algebra.h  camera.cpp  camera.h  configvalue.cpp  configvalue.h  main.cpp  mesh.cpp  mesh.h  shaders.h
Assignment 2/Lab2_Del 1_Extra/: camera.cpp  camera.h  configvalue.cpp  configvalue.h  main.cpp  mesh.cpp  mesh.h
Assignment 2/Lab2_Del 2/: InterlacedFragShader.glsl  InterlacedVertexShader.glsl  cartoon_FragShader.glsl  configvalue.cpp  configvalue.h  fragment_shader.glsl  main.cpp  mesh.cpp  phong_FragShader.glsl  shader_utils.cpp  shader_utils.h
Assignment 2/Lab2_Del 2_extra/: README.md  camera.cpp  camera.h  cartoon_FragShade_extra_light.glsl  cartoon_FragShader.glsl  configvalue.cpp  configvalue.h  flat_FragShader.glsl  flat_GeometryShader.glsl  flat_VertexShader.glsl  main.cpp  mesh.h  phong_FragShader.glsl  phong_FragShader_extra_light.glsl  phong_VertexShader.glsl  shader_utils.cpp  shader_utils.h  vertex_shader.glsl
Assignment 2/Lab3/: LAB3_cartoon_FragShade_extra_light.glsl  LAB3_phong_FragShader_extra_light.glsl  algebra.cpp  camera.cpp  camera.h  configvalue.cpp  configvalue.h  lab3_utils.cpp  lab3_utils.h  main.cpp  obj.h  shader_utils.cpp  shader_utils.h
Assignmnet 3/Lab3/: LAB3_cartoon_FragShade_extra_light.glsl  LAB3_phong_FragShader_extra_light.glsl  Lab3_advance_VertexShader.glsl  algebra.cpp  algebra.h  camera.cpp  camera.h  configvalue.cpp  configvalue.h  fragment_shader.glsl  lab3_utils.cpp  lab3_utils.h  main.cpp  obj.c  shader_utils.cpp  shader_utils.h  vertex_shader.glsl
